---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 3
      column: 11
    end_location:
      row: 3
      column: 15
    fix:
      content: from unittest import mock
      location:
        row: 3
        column: 4
      end_location:
        row: 3
        column: 15
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 7
      column: 11
    end_location:
      row: 7
      column: 15
    fix:
      content: "import sys\n    from unittest import mock"
      location:
        row: 7
        column: 4
      end_location:
        row: 7
        column: 20
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 11
      column: 4
    end_location:
      row: 11
      column: 22
    fix:
      content: from unittest.mock import *
      location:
        row: 11
        column: 4
      end_location:
        row: 11
        column: 22
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 14
      column: 7
    end_location:
      row: 14
      column: 16
    fix:
      content: from unittest import mock
      location:
        row: 14
        column: 0
      end_location:
        row: 14
        column: 16
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 17
      column: 19
    end_location:
      row: 17
      column: 23
    fix:
      content: "import contextlib, sys\nfrom unittest import mock"
      location:
        row: 17
        column: 0
      end_location:
        row: 17
        column: 28
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 20
      column: 7
    end_location:
      row: 20
      column: 11
    fix:
      content: "import sys\nfrom unittest import mock"
      location:
        row: 20
        column: 0
      end_location:
        row: 20
        column: 16
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 21
    fix:
      content: from unittest import mock
      location:
        row: 24
        column: 0
      end_location:
        row: 24
        column: 21
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 27
      column: 0
    end_location:
      row: 32
      column: 1
    fix:
      content: "from unittest.mock import (\n    a,\n    b,\n    c,\n)\nfrom unittest import mock"
      location:
        row: 27
        column: 0
      end_location:
        row: 32
        column: 1
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 33
      column: 0
    end_location:
      row: 38
      column: 1
    fix:
      content: "from unittest.mock import (\n    a,\n    b,\n    c,\n)\nfrom unittest import mock"
      location:
        row: 33
        column: 0
      end_location:
        row: 38
        column: 1
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 41
      column: 0
    end_location:
      row: 46
      column: 1
    fix:
      content: "from unittest.mock import (\n    a,\n    b,\n    c\n)\nfrom unittest import mock"
      location:
        row: 41
        column: 0
      end_location:
        row: 46
        column: 1
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 47
      column: 0
    end_location:
      row: 52
      column: 1
    fix:
      content: "from unittest.mock import (\n    a,\n    b,\n    c\n)\nfrom unittest import mock"
      location:
        row: 47
        column: 0
      end_location:
        row: 52
        column: 1
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 53
      column: 0
    end_location:
      row: 53
      column: 30
    fix:
      content: "from unittest.mock import a, b, c\nfrom unittest import mock"
      location:
        row: 53
        column: 0
      end_location:
        row: 53
        column: 30
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 54
      column: 0
    end_location:
      row: 54
      column: 30
    fix:
      content: "from unittest.mock import a, b, c\nfrom unittest import mock"
      location:
        row: 54
        column: 0
      end_location:
        row: 54
        column: 30
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 58
      column: 8
    end_location:
      row: 63
      column: 9
    fix:
      content: "from unittest.mock import (\n            a,\n            b,\n            c\n        )\n        from unittest import mock"
      location:
        row: 58
        column: 8
      end_location:
        row: 63
        column: 9
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 69
      column: 7
    end_location:
      row: 69
      column: 11
    fix:
      content: "from unittest import mock\nfrom unittest import mock"
      location:
        row: 69
        column: 0
      end_location:
        row: 69
        column: 17
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 69
      column: 13
    end_location:
      row: 69
      column: 17
    fix:
      content: "from unittest import mock\nfrom unittest import mock"
      location:
        row: 69
        column: 0
      end_location:
        row: 69
        column: 17
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 72
      column: 7
    end_location:
      row: 72
      column: 18
    fix:
      content: from unittest import mock as foo
      location:
        row: 72
        column: 0
      end_location:
        row: 72
        column: 18
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 75
      column: 0
    end_location:
      row: 75
      column: 28
    fix:
      content: from unittest import mock as foo
      location:
        row: 75
        column: 0
      end_location:
        row: 75
        column: 28
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 79
      column: 11
    end_location:
      row: 79
      column: 22
    fix:
      content: "from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 79
        column: 4
      end_location:
        row: 79
        column: 41
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 79
      column: 24
    end_location:
      row: 79
      column: 35
    fix:
      content: "from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 79
        column: 4
      end_location:
        row: 79
        column: 41
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 79
      column: 37
    end_location:
      row: 79
      column: 41
    fix:
      content: "from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 79
        column: 4
      end_location:
        row: 79
        column: 41
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 82
      column: 11
    end_location:
      row: 82
      column: 22
    fix:
      content: "import os\n    from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 82
        column: 4
      end_location:
        row: 82
        column: 45
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 82
      column: 24
    end_location:
      row: 82
      column: 35
    fix:
      content: "import os\n    from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 82
        column: 4
      end_location:
        row: 82
        column: 45
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 82
      column: 37
    end_location:
      row: 82
      column: 41
    fix:
      content: "import os\n    from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 82
        column: 4
      end_location:
        row: 82
        column: 45
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Import from `unittest.mock` instead"
      fixable: true
    location:
      row: 86
      column: 4
    end_location:
      row: 86
      column: 51
    fix:
      content: "from unittest import mock as foo\n    from unittest import mock as bar\n    from unittest import mock"
      location:
        row: 86
        column: 4
      end_location:
        row: 86
        column: 51
    parent: ~
  - kind:
      name: DeprecatedMockImport
      body: "`mock` is deprecated, use `unittest.mock`"
      suggestion: "Replace `mock.mock` with `mock`"
      fixable: true
    location:
      row: 93
      column: 4
    end_location:
      row: 93
      column: 13
    fix:
      content: mock
      location:
        row: 93
        column: 4
      end_location:
        row: 93
        column: 13
    parent: ~

